{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 163,
  "lineage": "eab22f44-d3d2-f225-4f49-deab4a54ddb4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951845434705:internet-gateway/igw-039c018ba3cfe0507",
            "id": "igw-039c018ba3cfe0507",
            "owner_id": "951845434705",
            "tags": {
              "CreatedAt": "2021-10-12",
              "ManagedBy": "Terraform",
              "Name": "Terraform IGW ",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2021-10-12",
              "ManagedBy": "Terraform",
              "Name": "Terraform IGW ",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-0fb6100740d7a29af"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:951845434705:loadbalancer/app/Terraform-ALB/684f2d06c05e80f2",
            "arn_suffix": "app/Terraform-ALB/684f2d06c05e80f2",
            "dns_name": "Terraform-ALB-1154734623.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:951845434705:loadbalancer/app/Terraform-ALB/684f2d06c05e80f2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Terraform-ALB",
            "security_groups": [
              "sg-0be1f8ff925c87d42"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-030be1950f5cfbabc"
              },
              {
                "subnet_id": "subnet-0e7a33115133463e7"
              }
            ],
            "subnets": [
              "subnet-030be1950f5cfbabc",
              "subnet-0e7a33115133463e7"
            ],
            "tags": {
              "CreatedAt": "2021-10-12",
              "ManagedBy": "Terraform",
              "Name": "Terraform ALB",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2021-10-12",
              "ManagedBy": "Terraform",
              "Name": "Terraform ALB",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-0fb6100740d7a29af",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:951845434705:listener/app/Terraform-ALB/684f2d06c05e80f2/3bec0b2da03db4b9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:951845434705:targetgroup/ALB-TG/739f53453e7c9d68",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:951845434705:listener/app/Terraform-ALB/684f2d06c05e80f2/3bec0b2da03db4b9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:951845434705:loadbalancer/app/Terraform-ALB/684f2d06c05e80f2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.this",
            "aws_lb_target_group.this",
            "aws_security_group.alb",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:951845434705:targetgroup/ALB-TG/739f53453e7c9d68",
            "arn_suffix": "targetgroup/ALB-TG/739f53453e7c9d68",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:951845434705:targetgroup/ALB-TG/739f53453e7c9d68",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0fb6100740d7a29af"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951845434705:route-table/rtb-0c68cf27b07d1e5d5",
            "id": "rtb-0c68cf27b07d1e5d5",
            "owner_id": "951845434705",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CreatedAt": "2021-10-12",
              "ManagedBy": "Terraform",
              "Name": "Terraform Private",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2021-10-12",
              "ManagedBy": "Terraform",
              "Name": "Terraform Private",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-0fb6100740d7a29af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951845434705:route-table/rtb-015b93ce5328a07e9",
            "id": "rtb-015b93ce5328a07e9",
            "owner_id": "951845434705",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-039c018ba3cfe0507",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedAt": "2021-10-12",
              "ManagedBy": "Terraform",
              "Name": "Terraform Public",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2021-10-12",
              "ManagedBy": "Terraform",
              "Name": "Terraform Public",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-0fb6100740d7a29af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Private A",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094ed9dc876d51541",
            "route_table_id": "rtb-0c68cf27b07d1e5d5",
            "subnet_id": "subnet-08153e68b75afcffe"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "Private B",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3e62777ad4e2e24",
            "route_table_id": "rtb-0c68cf27b07d1e5d5",
            "subnet_id": "subnet-08c63a94b371eb682"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "Public A",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017465740cb4f6265",
            "route_table_id": "rtb-015b93ce5328a07e9",
            "subnet_id": "subnet-0e7a33115133463e7"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "Public B",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d7caa638a69ca8a",
            "route_table_id": "rtb-015b93ce5328a07e9",
            "subnet_id": "subnet-030be1950f5cfbabc"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951845434705:security-group/sg-0be1f8ff925c87d42",
            "description": "Load Balancer SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be1f8ff925c87d42",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ALB-SG",
            "name_prefix": "",
            "owner_id": "951845434705",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2021-10-12",
              "ManagedBy": "Terraform",
              "Name": "Load Balancer",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2021-10-12",
              "ManagedBy": "Terraform",
              "Name": "Load Balancer",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb6100740d7a29af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "autoscaling",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951845434705:security-group/sg-0b18a1eeb488fcca2",
            "description": "Security group that allows ssh/http and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b18a1eeb488fcca2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0be1f8ff925c87d42"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "autoscaling",
            "name_prefix": "",
            "owner_id": "951845434705",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2021-10-12",
              "ManagedBy": "Terraform",
              "Name": "Auto Scaling",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2021-10-12",
              "ManagedBy": "Terraform",
              "Name": "Auto Scaling",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb6100740d7a29af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951845434705:security-group/sg-090352e5ec43267d3",
            "description": "Allow public inbound traffic",
            "egress": [],
            "id": "sg-090352e5ec43267d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Web",
            "name_prefix": "",
            "owner_id": "951845434705",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedAt": "2021-10-12",
              "ManagedBy": "Terraform",
              "Name": "Web Server",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2021-10-12",
              "ManagedBy": "Terraform",
              "Name": "Web Server",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb6100740d7a29af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951845434705:subnet/subnet-0e7a33115133463e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0e7a33115133463e7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "951845434705",
            "tags": {
              "CreatedAt": "2021-10-12",
              "ManagedBy": "Terraform",
              "Name": "Public A",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2021-10-12",
              "ManagedBy": "Terraform",
              "Name": "Public A",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-0fb6100740d7a29af"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "pub_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951845434705:subnet/subnet-030be1950f5cfbabc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-030be1950f5cfbabc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "951845434705",
            "tags": {
              "CreatedAt": "2021-10-12",
              "ManagedBy": "Terraform",
              "Name": "Public B",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2021-10-12",
              "ManagedBy": "Terraform",
              "Name": "Public B",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-0fb6100740d7a29af"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "pvt_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951845434705:subnet/subnet-08153e68b75afcffe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-08153e68b75afcffe",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "951845434705",
            "tags": {
              "CreatedAt": "2021-10-12",
              "ManagedBy": "Terraform",
              "Name": "Private A",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2021-10-12",
              "ManagedBy": "Terraform",
              "Name": "Private A",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-0fb6100740d7a29af"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "pvt_b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951845434705:subnet/subnet-08c63a94b371eb682",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-08c63a94b371eb682",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "951845434705",
            "tags": {
              "CreatedAt": "2021-10-12",
              "ManagedBy": "Terraform",
              "Name": "Private B",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2021-10-12",
              "ManagedBy": "Terraform",
              "Name": "Private B",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "vpc_id": "vpc-0fb6100740d7a29af"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:951845434705:vpc/vpc-0fb6100740d7a29af",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-09a5b09207a1290b1",
            "default_route_table_id": "rtb-0e20c82028d768426",
            "default_security_group_id": "sg-052f618c1382ac0df",
            "dhcp_options_id": "dopt-04d37621f7fd49ff2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0fb6100740d7a29af",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e20c82028d768426",
            "owner_id": "951845434705",
            "tags": {
              "CreatedAt": "2021-10-12",
              "ManagedBy": "Terraform",
              "Name": "Terraform VPC ",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            },
            "tags_all": {
              "CreatedAt": "2021-10-12",
              "ManagedBy": "Terraform",
              "Name": "Terraform VPC ",
              "Owner": "Tobias Andre Eggers",
              "Project": "AWS com Terraform",
              "Service": "Auto Scaling App"
            }
          }
        }
      ]
    }
  ]
}